Fixed some things

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/minhook"]
 	path = vendor/minhook
 	url = https://github.com/TsudaKageyu/minhook.git
-[submodule "vendor/imgui"]
+[submodule "imguicmake"]
 	path = vendor/imgui
-	url = https://github.com/Sna1lLord/imgui.git
+	url = https://github.com/Sna1lLord/imgui
